temp/objects/CP_TradeCallAgendaItem__c.object
<CustomObject>
    <fields>
        <fullName>InitiativeEndDate__c</fullName>
        <label>Initiative End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InitiativeStartDate__c</fullName>
        <label>Initiative Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TradeCallAgenda__c</fullName>
        <label>Call</label>
        <referenceTo>CP_TradeCall__c</referenceTo>
        <relationshipLabel>Trade Call Agenda Items</relationshipLabel>
        <relationshipName>TradeCallAgendaItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TradeInitiative__c</fullName>
        <label>Initiative</label>
        <referenceTo>CP_TradeInitiative__c</referenceTo>
        <relationshipLabel>Trade Call Agenda Items</relationshipLabel>
        <relationshipName>TradeCallAgendaItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Trade Call Agenda Item</label>
    <nameField>
        <label>Trade Call Agenda Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Call Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>